--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1300,4 +1300,24 @@ main {
       margin-right: 0;
     }
   }
+
+  .footer {
+    height: fit-content;
+
+    display: flex;
+
+    gap: 130px;
+
+    padding: 64px 40px;
+
+    &__grid {
+      display: flex;
+
+      flex-direction: column;
+
+      gap: 32px;
+
+      align-items: flex-start;
+    }
+  }
 }
