--- a/src/styles.scss
+++ b/src/styles.scss
@@ -98,7 +98,6 @@
 
   &_size_hero > &__body {
     max-width: 38ch;
-    margin-bottom: 10px;
   }
 
   &_size_regular > &__heading {
@@ -811,32 +810,6 @@ main {
   width: auto;
 }
 
-@media (max-width: 600px) {
-  :root {
-    --horizontal-padding: 24px;
-  }
-
-  .text {
-    &_heading_xl {
-      font-size: var(--size-2xl);
-      line-height: var(--line-height-l);
-      letter-spacing: var(--letter-spacing-s);
-    }
-
-    &_heading_l {
-      font-size: var(--size-xl);
-      line-height: var(--line-height-l);
-      letter-spacing: var(--letter-spacing-s);
-    }
-
-    &_body_1 {
-      font-size: var(--size-s);
-      line-height: var(--line-height-xs);
-      letter-spacing: var(--letter-spacing-zero);
-    }
-  }
-}
-
 @media (max-width: 1100px) {
   :root {
     --t: calc(100vw - 600px) / calc(768 - 600);
@@ -857,13 +830,11 @@ main {
     }
 
     &_size_hero > &__heading {
-      max-width: 14ch;
       margin-bottom: 20px;
     }
 
     &_size_hero > &__body {
       max-width: 50ch;
-      margin-bottom: 0px;
     }
 
     &_size_regular > &__heading {
@@ -872,12 +843,14 @@ main {
 
     &_size_regular > &__body {
       max-width: 40ch;
-      margin-bottom: 0px;
     }
   }
 
   .hero {
-    height: 992px;
+    height: fit-content;
+    min-height: 992px;
+
+    padding-top: 0;
 
     display: flex;
 
@@ -885,7 +858,7 @@ main {
     align-items: center;
 
     &__logo {
-      margin-top: 310px;
+      margin-top: 374px;
     }
 
     &__crop {
@@ -1140,6 +1113,233 @@ main {
       flex-direction: column;
 
       gap: 32px;
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  :root {
+    --horizontal-padding: 24px;
+  }
+
+  .logo {
+    height: 32px;
+  }
+
+  .text {
+    &_heading_xl {
+      font-size: var(--size-xl);
+      line-height: var(--line-height-l);
+      letter-spacing: var(--letter-spacing-s);
+    }
+
+    &_heading_l {
+      font-size: var(--size-xl);
+      line-height: var(--line-height-l);
+      letter-spacing: var(--letter-spacing-s);
+    }
+
+    &_body_1 {
+      font-size: var(--size-s);
+      line-height: var(--line-height-xs);
+      letter-spacing: var(--letter-spacing-zero);
+    }
+  }
+
+  .text-group {
+    &__divide-pattern {
+      margin-bottom: 39px;
+    }
+
+    &_size_hero > &__heading {
+      margin-bottom: 21px;
+    }
+
+    &_size_regular > &__heading {
+      margin-bottom: 11px;
+    }
+
+    // &_size_regular > &__body {
+    //   max-width: 40ch;
+    // }
+
+    &_size_large > &__heading {
+      margin-bottom: 12px;
+    }
+  }
+
+  .hero {
+    min-height: 748px;
+
+    &__logo {
+      margin-top: 232px;
+    }
+
+    &__crop {
+      height: 220px;
+    }
+
+    &__text-group {
+      margin-top: 36px;
+      margin-bottom: 53px;
+    }
+  }
+
+  .enjoyable-place {
+    height: 691px;
+
+    gap: 48px;
+
+    &__text-group {
+      transform: translate(0, -72px);
+    }
+
+    &__crop {
+      transform: translate(0, -72px);
+
+      aspect-ratio: 327/400;
+    }
+
+    &__top-right-pattern {
+      display: none;
+    }
+  }
+
+  .locally-sourced {
+    height: 763px;
+
+    gap: 48px;
+
+    padding-bottom: 101px;
+
+    &__crop {
+      aspect-ratio: 327/400;
+    }
+
+    &__top-left-pattern {
+      display: none;
+    }
+
+    &__lines-pattern {
+      display: none;
+    }
+  }
+
+  .highlights {
+    height: fit-content;
+    min-height: 1720px;
+
+    gap: 85px;
+
+    &__text-group {
+      margin-top: 72px;
+    }
+
+    &__image {
+      margin-right: 0;
+      margin-bottom: 36px;
+
+      width: 100%;
+
+      aspect-ratio: 327/245;
+    }
+
+    &__item {
+      align-items: center;
+      flex-direction: column;
+
+      margin-bottom: 30px;
+
+      & > .text-group {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        text-align: center;
+      }
+    }
+
+    &__line-pattern {
+      display: none;
+    }
+  }
+
+  .slides {
+    $height: 1044;
+
+    min-height: $height;
+
+    &__slide {
+      padding-top: 80px;
+
+      min-height: $height;
+    }
+
+    &__container {
+      margin-top: 49px;
+      margin-bottom: 124px;
+
+      width: 100%;
+      height: 391px;
+      min-height: 391px;
+      grid-template-rows: 116px 1fr 64px;
+    }
+
+    &__text-group {
+      transform: translateY(-16px);
+    }
+
+    &__list {
+      flex-direction: column;
+
+      gap: 5px;
+
+      justify-content: center;
+    }
+
+    &__lines-pattern {
+      display: none;
+    }
+
+    &__top-right-pattern {
+      display: none;
+    }
+  }
+
+  .cta {
+    height: 328px;
+    &__image {
+      width: 100%;
+      height: auto;
+
+      @media (max-width: 375px) {
+        width: auto;
+        height: 100%;
+      }
+    }
+  }
+
+  .footer {
+    height: fit-content;
+
+    flex-direction: column;
+    align-items: center;
+
+    gap: 42px;
+
+    padding: 80px 24px;
+
+    &__grid {
+      flex-direction: column;
+
+      gap: 32px;
+    }
+
+    &__group {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      text-align: center;
     }
   }
 }
