--- a/src/designSystem.css
+++ b/src/designSystem.css
@@ -1,25 +1,25 @@
 @font-face {
 	font-family: 'League Spartan';
 	font-weight: 300;
-	src: url('./assets/fonts/static/LeagueSpartan-Light.ttf') format('truetype');
+	src: url('/fonts/static/LeagueSpartan-Light.ttf') format('truetype');
 }
 
 @font-face {
-	font-family: 'League Spartan';
+	font-family: 'League Sparan';
 	font-weight: 400;
-	src: url('./assets/fonts/static/LeagueSpartan-Regular.ttf') format('truetype');
+	src: url('/fonts/static/LeagueSpartan-Regular.ttf') format('truetype');
 }
 
 @font-face {
 	font-family: 'League Spartan';
 	font-weight: 600;
-	src: url('./assets/fonts/static/LeagueSpartan-SemiBold.ttf') format('truetype');
+	src: url('/fonts/static/LeagueSpartan-SemiBold.ttf') format('truetype');
 }
 
 @font-face {
 	font-family: 'League Spartan';
 	font-weight: 700;
-	src: url('./assets/fonts/static/LeagueSpartan-Bold.ttf') format('truetype');
+	src: url('/fonts/static/LeagueSpartan-Bold.ttf') format('truetype');
 }
 
 :root {
