--- a/src/app.css
+++ b/src/app.css
@@ -1,8 +1,20 @@
 * {
 	box-sizing: border-box;
-
 	padding: 0;
 	margin: 0;
 
 	--horizontal-padding: 165px;
+}
+
+html {
+	background-color: white;
+}
+
+body {
+	max-width: 1440px;
+	margin: 0 auto;
+}
+
+section {
+	position: relative;
 }
