calculate the horizontal padding in +page.svelte
app.css requires a --horizontal-padding varialbe, +page.svelte creates
the horizontal padding and passes it as a component prop, the components
have access to app.css which is how they are affected by the padding

--- a/src/app.css
+++ b/src/app.css
@@ -1,9 +1,8 @@
 * {
 	box-sizing: border-box;
-	padding: 0;
-	margin: 0;
 
-	--horizontal-padding: 165px;
+	margin: 0;
+	padding: 0;
 }
 
 html {
@@ -11,10 +10,12 @@ html {
 }
 
 body {
-	max-width: 1440px;
 	margin: 0 auto;
+	max-width: 1440px;
 }
 
 section {
 	position: relative;
+
+	padding: 0 var(--horizontal-padding);
 }
