Set horizontal padding in app.css
This is less flexible if I want to change the padding but saves having
to calculate it

--- a/src/app.css
+++ b/src/app.css
@@ -17,5 +17,10 @@ body {
 section {
 	position: relative;
 
+	--horizontal-padding: min(165px, calc(29.545454545454547vw + -260.4545454545455px));
+
 	padding: 0 var(--horizontal-padding);
+
+	@media (max-width: 1000) {
+	}
 }
